--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -9,16 +9,19 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="{{"/" | relative_url }}">Home</a>
+          <a class="nav-link" href="{{"/" | relative_url }}">Startseite</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{"/about" | relative_url }}">About</a>
+          <a class="nav-link" href="{{"/about" | relative_url }}">Über uns</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ "/posts" | relative_url }}">Posts</a>
+          <a class="nav-link" href="{{ "/posts" | relative_url }}">Neuigkeiten</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{"/contact" | relative_url }}">Contact</a>
+          <a class="nav-link" href="{{"/contact" | relative_url }}">Kontakt</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{"/Impressum" | relative_url }}">Impressum</a>
         </li>
       </ul>
     </div>
