--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -21,7 +21,7 @@
           <a class="nav-link" href="{{"/contact" | relative_url }}">Kontakt</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{"/Impressum" | relative_url }}">Impressum</a>
+          <a class="nav-link" href="{{"/impressum" | relative_url }}">Impressum</a>
         </li>
       </ul>
     </div>
