--- a/_includes/foerderhinweis.html
+++ b/_includes/foerderhinweis.html
@@ -6,7 +6,7 @@
   <div style="max-width: 500px;">
     <p class="small text-muted" style="margin: 0;">
       Das Vorhaben <strong>INNO-SCREW</strong> wird über die EURONORM GmbH im Rahmen des Förderprogramms
-      <em>"Innovationskompetenz INNO-KOM"</em> des Bundesministeriums für Wirtschaft und Energie (BMWi) gefördert.
+      <em>"Innovationskompetenz INNO-KOM"</em> des Bundesministeriums für Wirtschaft und Energie (BMWE) gefördert.
     </p>
   </div>
 </div>
