--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,10 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
   <div class="container">
-    <a class="navbar-brand" href="{{"/" | relative_url }}">{{ site.title | escape }}</a>
+    <a class="navbar-brand" href="{{"/" | relative_url }}">
+      <img class="logo-dark" src="/img/logo/Logo_InnoScrew_ohne_Rahmen.png" alt="" height="80">
+      <img class="logo-light" src="/img/logo/Logo_InnoScrew_ohne_Rahmen_darkmode.png" alt="" height="80">
+    </a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       Menu
       <i class="fa fa-bars"></i>
